--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,12 @@ h1{
     height: 80px;
     margin:80px 0 50px 0;
 }
+.bloque2{
+    width:100%;
+    background-color: #fff;
+    height: 80px;
+    margin:10% 0 50px 0;
+}
 .bot1{
     box-sizing: border-box;
     background-color:rgb(0, 162, 255);
@@ -53,6 +59,17 @@ h1{
     text-decoration: dashed;
     font-size:30px;
     margin: 0 0 0 80px;
+}
+.bot2{
+    box-sizing: border-box;
+    background-color:rgb(0, 162, 255);
+    color:white;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    padding:20px;
+    border-radius:5px;
+    text-decoration: dashed;
+    font-size:30px;
+    margin: 0 0 0 65%;
 }
 
 /* Enlace 1 */
