--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,18 @@ h1{
     font-size:30px;
     margin: 0 0 0 65%;
 }
+.bot3{
+    box-sizing: border-box;
+    background-color:rgb(0, 162, 255);
+    color:white;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    padding:20px;
+    border-radius:5px;
+    text-decoration: dashed;
+    font-size:30px;
+    margin: 0 0 0 30%;
+}
+
 
 /* Enlace 1 */
 .bo1{
