--- a/enlaces/tabla.css
+++ b/enlaces/tabla.css
@@ -7,6 +7,7 @@ td{
     color:rgb(77, 77, 77);
 }
 table{
+    padding:6px;
     width:100%;
     border: 2px solid rgb(73, 73, 73);
     padding:2px;
