--- a/enlaces/tabla.css
+++ b/enlaces/tabla.css
@@ -14,3 +14,10 @@ table{
     margin:auto;
     max-width:600px;
 }
+video{
+    max-width:50%;
+    margin-top:20px;
+    margin-bottom:20px;
+    margin:auto;
+    text-align: center;
+}
